简化湮灭半径边界裁剪